--- a/depth_map/depth_map.vcxproj.filters
+++ b/depth_map/depth_map.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="..\common\shader.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\3rdparty\rply-1.1.4\rply.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\common\shader.h">
